--- a/index.html
+++ b/index.html
@@ -6,9 +6,34 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="format-detection" content="telephone=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Book Store</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+    <title>Bookshop</title>
+    <link rel="stylesheet" href="scss/styles.css" type='text/css'>
 </head>
 <body>
+    <header class="header">
+        <div class="header__container">
+            <a href="#" class="header__logo">Bookshop</a>
+            <ul class="header__menu">
+                <li><a href="#" class="header__menu--active">books</a></li>
+                <li><a href="#">audiobooks</a></li>
+                <li><a href="#">Stationery & gifts</a></li>
+                <li><a href="#">blog</a></li>
+            </ul>
+            <ul class="header__menu">
+                <li><a href="#" class="header__icon header__icon--user"></a></li>
+                <li><a href="#" class="header__icon header__icon--search"></a></li>
+                <li><a href="#" class="header__icon header__icon--shop"></a></li>
+            </ul>
+        </div>
+    </header>
+    <section class="slider">
+        <div class="slider__container">
+
+        </div>
+    </section>
 
 </body>
 </html>
