--- a/index.html
+++ b/index.html
@@ -31,9 +31,20 @@
     </header>
     <section class="slider">
         <div class="slider__container">
-
+            <div class="slider__wrapper">
+                <div class="slider__item">
+                    <img src="img/slider/slide1.png" alt="Первый слайд">
+                </div>
+                <div class="slider__item">
+                    <img src="img/slider/slide2.png" alt="Второй слайд">
+                </div>
+                <div class="slider__item">
+                    <img src="img/slider/slide3.png" alt="Третий слайд">
+                </div>
+            </div>
+            <ul class="slider__dots"></ul>
         </div>
     </section>
-
+    <script src="js/slider.js"></script>
 </body>
 </html>
